# othello

./: CMakeLists.txt  README.md
src/: api.cpp  api.hpp  bitboard.cpp  bitboard.hpp  driver.cpp  evaluator.cpp  evaluator.hpp  hash_table.cpp  hash_table.hpp  minimax.cpp  minimax.hpp  stats.cpp  stats.hpp
